Haciendo pruebas unitarias y refactorizando el codigo